[workspace]
resolver = "2"
members = [
    "apob",
    "apob-cli",
]

[workspace.package]
edition = "2021"
license = "MPL-2.0"
rust-version = "1.81"

[workspace.dependencies]
apob = { path = "apob", default-features = true }
apob-cli = { path = "apob-cli", default-features = false }

anyhow = { version = "1" }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28" }
ratatui = { version = "0.29" }
strum = { version = "0.27.2" }
strum_macros = { version = "0.27.2" }
zerocopy = { version = "0.8.25", features = ["derive"] }

[profile.release]
debug = 2
lto = true
